name:                benchmarker
version:             0.1.0.0
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable benchmarker
  main-is:             Main.hs
  build-depends:       base >=4.8
                     , Spock
                     , lucid
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -O2 -threaded -fllvm
